# WBsells

./: .gitignore  CMakeLists.txt  README.md
src/: database.cpp  database.h  main.cpp  wbback.cpp  wbback.h
